# First-Principles-SLAM

./: .agrules  .coderabbit.yaml  .dockerignore  .gitignore  DOCKER_README.md  Dockerfile  README.md  docker-compose.yml
docker/: build.sh  entrypoint.sh  exec.sh  run.sh
src/euroc_driver/: CMakeLists.txt  README.md  package.xml
src/euroc_driver/config/: cam0_config.yaml  cam1_config.yaml  default_params.yaml  imu_config.yaml
src/euroc_driver/include/euroc_driver/: csv_reader.hpp  data_parsers.hpp  data_publisher.hpp
src/euroc_driver/launch/: data_publisher.launch.py
src/euroc_driver/src/: csv_reader.cpp  data_parsers.cpp  data_publisher.cpp  data_publisher_impl.cpp
src/inertial_frontend/: CMakeLists.txt  package.xml
src/inertial_frontend/include/inertial_frontend/: imu_preintegrator.hpp  preintegrated_imu_measurement.hpp
src/inertial_frontend/src/: imu_preintegrator.cpp
src/inertial_frontend/test/: test_preintegration.cpp
src/vio_backend/: CMakeLists.txt  package.xml
src/vio_backend/src/: estimator_node.cpp
src/vio_frontend/: CMakeLists.txt  package.xml
src/vio_frontend/config/: tracker.yaml
src/vio_frontend/include/vio_frontend/: feature_tracker.hpp  feature_tracker_node.hpp  feature_tracker_ros.hpp  imu_preintegrator.hpp  imu_preintegrator_ros.hpp  preintegrated_imu_measurement.hpp
src/vio_frontend/launch/: vio_frontend_test.launch.py
src/vio_frontend/msg/: Feature.msg  VIOUpdate.msg
src/vio_frontend/src/: estimator.cpp  feature_tracker.cpp  feature_tracker_main.cpp  feature_tracker_node.cpp  feature_tracker_ros.cpp  imu_preintegrator.cpp  imu_preintegrator_ros.cpp  tracker_check.cpp  vio_frontend_node.cpp
src/vio_frontend/test/: test_preintegration.cpp  tracker_test.cpp
